fix connexion and to private blogs

--- a/public/private.html
+++ b/public/private.html
@@ -6,14 +6,9 @@
 </head>
 <body>
 
-<button id="generateBlogButton">Générer un Blog</button>
-
 <h1>Liste des Blogs</h1>
 <div id="blogsContainer"></div>
 
-<button id="accessPrivateBlog">Accéder au blog privé</button>
-
-
-<script type="module" src="js/index.js"></script>
+<script src="/js/private.js"></script>
 </body>
 </html>
