--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
   <button type="submit">Se connecter</button>
 </form>
 
-<script src="/js/login.js">
+<script type="module" src="/js/login.js">
 
 </script>
 </body>
