--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 <button id="accessPrivateBlog" onclick="window.location.href = '/blogs/private';">Accéder au blog privé</button>
 
 
-<script type="module" src="js/index.js"></script>
+<script type="module" src="/js/index.js"></script>
 </body>
 </html>
