--- a/public/login.html
+++ b/public/login.html
@@ -15,6 +15,8 @@
   <input type="password" id="loginPassword" name="password" required>
   <br>
   <button type="submit">Se connecter</button>
+  <button onclick="window.location.href = '/login/federated/google'">TEST GOOGLE</button>
+  <a class="button google" href="/login/federated/google">Sign in with Google</a>
 </form>
 
 <script type="module" src="/js/login.js">
