--- a/public/login.html
+++ b/public/login.html
@@ -4,23 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connexion</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<h2>Connexion</h2>
-<form id="loginForm">
-  <label for="loginUsername">Email :</label>
-  <input type="text" id="loginUsername" name="username" required>
-  <br>
-  <label for="loginPassword">Mot de passe:</label>
-  <input type="password" id="loginPassword" name="password" required>
-  <br>
-  <button type="submit">Se connecter</button>
-  <button onclick="window.location.href = '/login/federated/google'">TEST GOOGLE</button>
-  <a class="button google" href="/login/federated/google">Sign in with Google</a>
-</form>
-
-<script type="module" src="/js/login.js">
-
-</script>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+<div class="bg-white p-8 rounded shadow-md w-full max-w-sm">
+  <h2 class="text-2xl font-bold mb-6 text-center">Connexion</h2>
+  <form id="loginForm" class="space-y-4">
+    <div>
+      <label for="loginUsername" class="block text-sm font-medium text-gray-700">Email :</label>
+      <input type="text" id="loginUsername" name="username" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+    </div>
+    <div>
+      <label for="loginPassword" class="block text-sm font-medium text-gray-700">Mot de passe :</label>
+      <input type="password" id="loginPassword" name="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+    </div>
+    <div class="flex items-center justify-between">
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Se connecter</button>
+      <a class="block text-center text-blue-500 hover:underline" href="/login/federated/google">Sign in with Google</a>
+    </div>
+  </form>
+</div>
+<script type="module" src="/js/login.js"></script>
 </body>
 </html>
