--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <nav class="bg-white shadow-md">
     <div class="container mx-auto p-4 flex justify-between items-center">
         <a href="/" class="text-xl font-bold">Home</a>
+        <a>Espace personnel</a>
         <button id="authButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Connexion</button>
     </div>
 </nav>
