--- a/public/private.html
+++ b/public/private.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Private Blogs</title>
+    <meta charset="UTF-8">
+    <title>Private Blogs</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
 <!-- Navbar -->
 <nav class="bg-white shadow-md">
-  <div class="container mx-auto p-4 flex justify-between items-center">
-    <a href="/" class="text-xl font-bold">Home</a>
-    <button id="authButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Connexion</button>
-  </div>
+    <div class="container mx-auto p-4 flex justify-between items-center">
+        <a href="/" class="text-xl font-bold">Home</a>
+        <div class="flex gap-4 flex-row">
+            <button id="personalSpaceButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Espace
+                personnel
+            </button>
+            <button id="authButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Connexion
+            </button>
+        </div>
+    </div>
 </nav>
 
 <div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold mt-4 text-center">Liste des Blogs Privés</h1>
-  <div id="privateBlogsContainer" class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    <h1 class="text-2xl font-bold mt-4 text-center">Liste des Blogs Privés</h1>
+    <div id="privateBlogsContainer" class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
 </div>
 
 <script src="/js/private.js"></script>
