add style to register + google

--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,10 @@
     </div>
     <div class="flex items-center justify-between">
       <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Se connecter</button>
-      <a class="block text-center text-blue-500 hover:underline" href="/login/federated/google">Sign in with Google</a>
+      <a class="block text-center text-blue-500 hover:underline" href="/login/federated/google">Se connecter avec Google</a>
+    </div>
+    <div>
+        <a class="block text-center text-blue-500 hover:underline" href="/register">Pas encore de compte ? Inscrivez-vous</a>
     </div>
   </form>
 </div>
