--- a/public/register.html
+++ b/public/register.html
@@ -4,19 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inscription</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<h2>Inscription</h2>
-<form id="registerForm">
-  <label for="registerUsername">Email :</label>
-  <input type="text" id="registerUsername" name="username" required>
-  <br>
-  <label for="registerPassword">Mot de passe :</label>
-  <input type="password" id="registerPassword" name="password" required>
-  <br>
-  <button type="submit">S'inscrire</button>
-</form>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+<div class="bg-white p-8 rounded shadow-md w-full max-w-sm">
+  <h2 class="text-2xl font-bold mb-6 text-center">Inscription</h2>
+  <form id="registerForm" class="space-y-4">
+    <div>
+      <label for="registerUsername" class="block text-sm font-medium text-gray-700">Email :</label>
+      <input type="text" id="registerUsername" name="username" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+    </div>
+    <div>
+      <label for="registerPassword" class="block text-sm font-medium text-gray-700">Mot de passe :</label>
+      <input type="password" id="registerPassword" name="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+    </div>
+    <div>
+      <label for="confirmPassword" class="block text-sm font-medium text-gray-700">Confirmez le mot de passe :</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+    </div>
+    <div class="flex items-center justify-between">
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">S'inscrire</button>
+      <a class="block text-center text-blue-500 hover:underline" href="/login/federated/google">S'inscrire avec Google</a>
+    </div>
+    <a class="block text-center text-blue-500 hover:underline" href="/login">Déjà un compte ? Connectez-vous</a>
 
+  </form>
+</div>
 <script src="/js/register.js"></script>
 </body>
 </html>
